2011-02-04 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Hookaufruf kompatibel zu TYPO3 4.4 gemacht
	* Content Rendering vereinheitlicht (WWW-530)
	* Maps Optik angepasst (Infobox)
	* Singleansicht (WWW-531)
	* Ansicht nur Bibliotheken mit Sigel und Titel (WWW-525)

2011-02-03 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Frontendausgabe angepasst (WWW-529)
	* Ausgabe externer Links im neuen Fenster
	* Optimiertes Parsen der Links
	* Standardmarker fuer Google Maps Einbindung (WWW-524)
	* Onclick Oeffnung des Maps Infofensters
	* Sigel generischer gestaltet (WWW-526)
	* Zeitzonenhartkodierung entfernt

2011-01-28 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Geocoding optimierung
	* Verbesserung der Performance
	* Maps funktioniert auch fuer Bibliotheken ausserhalb Deutschlands (Beispiel China)
	* Aus Kompatibilitaetsgruenden Hook deaktiviert

2011-01-26 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* jQuery Improvements
	* Update Controller
	* Update Ajax Funktionen

2011-01-26 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Optimierung Backend Modul
	* Tabellensortierung

2011-01-19 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Rewrite Backend Modul

2011-01-18 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Google Maps mit Custom Icon
	* Karte wird erst nach einem Klick dargestellt
	* Loeschen ueberfluessiger Dateien

2011-01-17 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Google Maps laden per AJAX

2011-01-11 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Korrekte Anzeige TypoLink mit Titel usw. (WWW-510)
	* Bugfixes Oeffnungszeitendarstellung

2011-01-10 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Vereinheitlichung Verzeichnisstrukturen
	* RealUrl Config (WWW-505)
	* Pflichtangabe der Uhrzeit mit Formatierung durch : (WWW-507)

2010-12-23 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>