@@ -3,97 +3,10 @@
 if (!defined('TYPO3_MODE'))
 	die('Access denied.');
 
-$TCA['tx_standorte_domain_model_fakultaet'] = array(
-	'ctrl' => $TCA['tx_standorte_domain_model_fakultaet']['ctrl'],
-	'interface' => array(
-		'showRecordFieldList' => 'sys_language_uid,l10n_parent,l10n_diffsource,hidden,titel,extlink'
-	),
-	'feInterface' => $TCA['tx_standorte_domain_model_fakultaet']['feInterface'],
-	'columns' => array(
-		'sys_language_uid' => array(
-			'exclude' => 1,
-			'label' => 'LLL:EXT:lang/locallang_general.xml:LGL.language',
-			'config' => array(
-				'type' => 'select',
-				'foreign_table' => 'sys_language',
-				'foreign_table_where' => 'ORDER BY sys_language.title',
-				'items' => array(
-					array('LLL:EXT:lang/locallang_general.xml:LGL.allLanguages', -1),
-					array('LLL:EXT:lang/locallang_general.xml:LGL.default_value', 0)
-				)
-			)
-		),
-		'l10n_parent' => array(
-			'displayCond' => 'FIELD:sys_language_uid:>:0',
-			'exclude' => 1,
-			'label' => 'LLL:EXT:lang/locallang_general.xml:LGL.l18n_parent',
-			'config' => array(
-				'type' => 'select',
-				'items' => array(
-					array('', 0),
-				),
-				'foreign_table' => 'tx_standorte_domain_model_fakultaet',
-				'foreign_table_where' => 'AND tx_standorte_domain_model_fakultaet.pid=###CURRENT_PID### AND tx_standorte_domain_model_fakultaet.sys_language_uid IN (-1,0)',
-			)
-		),
-		'l10n_diffsource' => array(
-			'config' => array(
-				'type' => 'passthrough'
-			)
-		),
-		'hidden' => array(
-			'exclude' => 1,
-			'label' => 'LLL:EXT:lang/locallang_general.xml:LGL.hidden',
-			'config' => array(
-				'type' => 'check',
-				'default' => '0'
-			)
-		),
-		'titel' => array(
-			'exclude' => 0,
-			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_fakultaet.titel',
-			'config' => array(
-				'type' => 'input',
-				'size' => '30',
-				'eval' => 'required,trim',
-			)
-		),
-		'extlink' => array(
-			'exclude' => 0,
-			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_fakultaet.extlink',
-			'config' => array(
-				'type' => 'input',
-				'size' => '15',
-				'max' => '255',
-				'checkbox' => '',
-				'eval' => 'trim',
-				'wizards' => array(
-					'_PADDING' => 2,
-					'link' => array(
-						'type' => 'popup',
-						'title' => 'Link',
-						'icon' => 'link_popup.gif',
-						'script' => 'browse_links.php?mode=wizard',
-						'JSopenParams' => 'height=300,width=500,status=0,menubar=0,scrollbars=1'
-					)
-				)
-			)
-		),
-	),
-	'types' => array(
-		'0' => array('showitem' => 'sys_language_uid;;;;1-1-1, l10n_parent, l10n_diffsource, hidden;;1, titel, extlink, bibliothek')
-	),
-	'palettes' => array(
-		'1' => array('showitem' => '')
-	)
-);
-
-
-
 $TCA['tx_standorte_domain_model_bibliothek'] = array(
 	'ctrl' => $TCA['tx_standorte_domain_model_bibliothek']['ctrl'],
 	'interface' => array(
-		'showRecordFieldList' => 'sys_language_uid,l10n_parent,l10n_diffsource,hidden,sigel,titel,sorttitel,extlink,lat,lon,bestand,katalog,institutskatalog,strasse,adresszusatz,plz,ort,ansprechpartner,oeffnungszeiten,zusatzinformationen,bild,fakultaet'
+		'showRecordFieldList' => 'sys_language_uid,l10n_parent,l10n_diffsource,hidden,sigel,titel,sorttitel,extlink,lat,lon,bestand,katalog,institutskatalog,strasse,adresszusatz,plz,ort,ansprechpartner,semesterferien,oeffnungszeiten,zusatzinformationen,bild,fakultaet'
 	),
 	'feInterface' => $TCA['tx_standorte_domain_model_bibliothek']['feInterface'],
 	'columns' => array(
@@ -283,6 +196,13 @@ $TCA['tx_standorte_domain_model_bibliothek'] = array(
 				'maxitems' => 9999
 			),
 		),
+		'semesterferien' => array(
+			'exclude' => 0,
+			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_bibliothek.semesterferien',
+			'config' => array(
+				'type' => 'check',
+			)
+		),
 		'bild' => array(
 			'exclude' => 0,
 			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_bibliothek.bild',
@@ -376,91 +296,10 @@ $TCA['tx_standorte_domain_model_bibliothek'] = array(
 		),
 	),
 	'types' => array(
-		'0' => array('showitem' => 'sys_language_uid;;;;1-1-1, l10n_parent, l10n_diffsource, hidden;;1, sigel, titel, sorttitel, extlink, lat, lon, bestand, katalog, institutskatalog, strasse, adresszusatz, plz, ort, ansprechpartner, oeffnungszeiten, zusatzinformationen;;;richtext[]:rte_transform[mode=ts_css|imgpath=uploads/tx_standorte/rte/], bild, fakultaet'),
+		'0' => array('showitem' => 'sys_language_uid;;;;1-1-1, l10n_parent, l10n_diffsource, hidden;;1, sigel, titel, sorttitel, extlink, lat, lon, bestand, katalog, institutskatalog, strasse, adresszusatz, plz, ort, ansprechpartner, semesterferien, oeffnungszeiten, zusatzinformationen;;;richtext[]:rte_transform[mode=ts_css|imgpath=uploads/tx_standorte/rte/], bild, fakultaet'),
 	),
 	'palettes' => array(
 		'1' => array('showitem' => '')
-	)
-);
-
-$TCA['tx_standorte_domain_model_oeffnungszeiten'] = array(
-	'ctrl' => $TCA['tx_standorte_domain_model_oeffnungszeiten']['ctrl'],
-	'interface' => array(
-		'showRecordFieldList' => 'wochentag,von,bis,inhalt',
-		'maxDBListItems' => 0
-	),
-	'feInterface' => $TCA['tx_standorte_domain_model_oeffnungszeiten']['feInterface'],
-	'columns' => array(
-		'hidden' => array(
-			'exclude' => 1,
-			'label' => 'LLL:EXT:lang/locallang_general.xml:LGL.hidden',
-			'config' => array(
-				'type' => 'check',
-				'default' => '0'
-			)
-		),
-		'wochentag' => array(
-			'exclude' => 0,
-			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag',
-			'config' => array(
-				'type' => 'select',
-				'items' => array(
-					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.0', '1'),
-					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.1', '2'),
-					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.2', '3'),
-					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.3', '4'),
-					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.4', '5'),
-					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.5', '6'),
-					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.6', '7'),
-					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.7', '8'),
-					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.8', '9'),
-				),
-				'size' => 1,
-				'maxitems' => 1,
-			)
-		),
-		'von' => array(
-			'displayCond' => 'FIELD:wochentag:<=:8',
-			'exclude' => 0,
-			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.von',
-			'config' => array(
-				'type' => 'input',
-				'size' => '5',
-				'max' => '5',
-				'eval' => 'required,trim,time',
-			)
-		),
-		'bis' => array(
-			'displayCond' => 'FIELD:wochentag:<=:8',
-			'exclude' => 0,
-			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.bis',
-			'config' => array(
-				'type' => 'input',
-				'size' => '5',
-				'max' => '5',
-				'eval' => 'required,trim,time',
-			)
-		),
-		'inhalt' => array(
-			'displayCond' => 'FIELD:wochentag:=:9',
-			'exclude' => 0,
-			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.inhalt',
-			'config' => array(
-				'type' => 'text',
-				'cols' => 30,
-				'rows' => 5
-			)
-		),
-		'bibliothek' => array(
-			'exclude' => 0,
-			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.bibliothek',
-			'config' => array(
-				'type' => 'passthrough',
-			)
-		),
-	),
-	'types' => array(
-		'0' => array('showitem' => 'hidden;;1;;1-1-1, wochentag, von, bis,inhalt'),
 	)
 );
 ?>
